--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: red;
 }
+
+/*.App-Body{
+  background-color: ;
+}*/
 
 .App-link {
   color: #61dafb;
